# lib/module/v1/user/userModel.js
@@ -45,11 +45,11 @@ var UserSchema = new Schema(
       max: 3,
     },
     status: {
-      type: Number,
+      type: Number, //active 1 , inactive 2
       default: 1,
     },
     isDelete: {
-      type: Number,
+      type: Number, //1 soft 2 hard
       default: 0,
     },
     created: {
@@ -72,6 +72,10 @@ var UserSchema = new Schema(
       type: Number, 
       default: 0,
     },
+    password:{
+      type: String,
+      default: "",
+    }
     // gender: {
     //     type: Number,
     //     default: 0, //0 Undefined, 1 Male, 2 Female, 3 Others
