# lib/module/v1/user/userRoute.js
@@ -43,6 +43,36 @@ router
       });
   });
 
+
+  router
+  .route("/register1")
+  .post([validators.validateRegistration], function (req, res) {
+    console.log(req.body);
+    let {
+      accountNumber,
+      membershipId,
+      name,
+      mobileNo,
+      acceptedTermsAndCondition,
+      email
+    } = req.body;
+
+    userFacade
+      .register1({
+        accountNumber,
+        membershipId,
+        name,
+        mobileNo,
+        acceptedTermsAndCondition,
+        email
+      })
+      .then(function (result) {
+        resHndlr.sendSuccess(res, result, req);
+      })
+      .catch(function (err) {
+        resHndlr.sendError(res, err, req);
+      });
+  });
   router
   .route("/validateOtp")
   .post([validators.validateOtp], function (req, res) {
@@ -87,10 +117,10 @@ router
 
 
 router.route("/login")
-    .post([middleware.authenticate.autntctTkn , validators.validateMpin], function (req, res) {
-        let {mPin} = req.body;
+    .post([middleware.authenticate.autntctTkn, validators.validateMpin ], function (req, res) {
+        console.log(req.body);
+      let {mPin } = req.body;
         let {userId } = req.user;
-        //get ip from request
         let clientIp = requestIp.getClientIp(req);
         userFacade.userLogin({ mPin, userId,clientIp })
         .then(function (result) {
@@ -100,6 +130,22 @@ router.route("/login")
             resHndlr.sendError(res, err,req);
         })
     });
+    
+
+    router.route("/firstLogin")
+    .post([validators.validateMpin ], function (req, res) {
+        console.log(req.body);
+      let {mPin , mobileNo} = req.body;
+        let clientIp = requestIp.getClientIp(req);
+        userFacade.userFirstLogin({ mPin, mobileNo ,clientIp })
+        .then(function (result) {
+            resHndlr.sendSuccess(res, result,req);
+        })
+        .catch(function (err) {
+            resHndlr.sendError(res, err,req);
+        })
+    });
+
 
     router.route('/forgetPin')
     .post([validators.validateForgetPin], function (req, res) {
@@ -143,7 +189,143 @@ router.route("/login")
       })
     })
 
-    
+    router.route('/login')
+    .post([validators.validateLogin], function (req, res) {
+        let {email, password, platform, deviceToken, appType} = req.body;
+
+        userFacade.login({email, password, platform, deviceToken, appType })
+            .then(function (result) {
+                resHndlr.sendSuccess(res, result, req)
+            }).catch(function (err) {
+            resHndlr.sendError(res, err, req)
+        })
+    }); 
+
+    router.route("/addUser")
+    .post( [middleware.authenticate.autntctTkn],function (req, res) {
+  
+      let {userId,userType } = req.user;
+        let {
+            membershipId,
+            name,
+            email,
+            password,
+            mPIN,
+            mobileNo,
+            acceptedTermsAndCondition,
+        } = req.body;
+        let UserType = req.body.userType
+
+        userFacade.addUser({
+          userId,
+          membershipId,
+          name,
+          email,
+          password,
+          mPIN,
+          mobileNo,
+          userType,
+          UserType,
+          acceptedTermsAndCondition,
+        }).then(function (result) {
+            resHndlr.sendSuccess(res, result, req);
+        }).catch(function (err) {
+            resHndlr.sendError(res, err, req);
+        })
+    })
+
+router.route("/editUser")
+    .put( [middleware.authenticate.autntctTkn],function (req, res) {
+  
+      let {userId,userType } = req.user;
+        let {
+          customerId,
+            membershipId,
+            name,
+            email,
+            mobileNo,
+            status
+        } = req.query;
+
+        let UserType = req.query.userType
+
+        userFacade.editUser({
+          userId,
+          membershipId,
+          name,
+          email,
+          customerId,
+          mobileNo,
+          userType,
+          UserType,
+          status
+        }).then(function (result) {
+            resHndlr.sendSuccess(res, result, req);
+        }).catch(function (err) {
+            resHndlr.sendError(res, err, req);
+        })
+    })
+
+
+
+router.route("/userList")
+.get( [middleware.authenticate.autntctTkn],function (req, res) {
+
+  let {userId,userType } = req.user;
+    let {
+      status,
+      search,
+      count,
+      pageNo,
+      sortType,
+      sortField
+    } = req.query;
+
+
+    userFacade.userList({
+      status,
+      search,
+      count,
+      pageNo,
+      sortType,
+      sortField,userId,userType
+    }).then(function (result) {
+        resHndlr.sendSuccess(res, result, req);
+    }).catch(function (err) {
+        resHndlr.sendError(res, err, req);
+    })
+})
+
+
+router
+  .route("/deleteUser")
+  .delete([middleware.authenticate.autntctTkn], function (req, res) {
+    let { userType, userId } = req.user;
+    let { customerId, isDeleted } = req.query;
+
+    userFacade
+      .deleteUser({ customerId, userType, userId, isDeleted })
+      .then(function (result) {
+        resHndlr.sendSuccess(res, result, req);
+      })
+      .catch(function (err) {
+        resHndlr.sendError(res, err, req);
+      });
+  });
+  
+
+
+  router.route('/loginAsAdmin')
+  .post([validators.validateLoginAsAdmin], function (req, res) {
+      let {email, password} = req.body;
+
+      userFacade.loginAsAdmin({email, password })
+          .then(function (result) {
+              resHndlr.sendSuccess(res, result, req)
+          }).catch(function (err) {
+          resHndlr.sendError(res, err, req)
+      })
+  }); 
 // router.route("/edit")
 //     .post([middleware.authenticate.autntctTkn,middleware.authenticateRole.userRole(constant.ACCOUNT_ROLE.ADMIN),middleware.multer.single('profileImage'),middleware.mediaUpload.uploadSingleMediaToS3('profile')], function (req, res) {
 //         let profileImage;
